<resources>
    <string name="app_name">Dashboard Home</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ip_style">192.168.0.1</string>
    <string name="port_style">1883</string>
    <string name="clientid_style">Host name</string>
    <string name="botao_signin">Sign in</string>
    <string name="user_name_style">username@hotmail.com....</string>
    <string name="botao_register_style">Register</string>
    <string name="botao_singup_style">Sign up</string>
    <string name="topic_style" translatable="false">Ex: LuzQuarto</string>
    <string name="value_style">Liga/Desliga</string>
    <string name="nameButton_style">Luz</string>
    <string name="new_username_email">(NEW) username@hotmail.com</string>
    <string name="new_password_style">(NEW) password</string>
</resources>
