<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/user_name_style"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/passwordId"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="190dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:srcCompat="@drawable/icon_image_grey" />

    <Button
        android:id="@+id/botaoSigninId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="70dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/botao_signin"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/botaoRegisterId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="70dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/botao_register_style"
        android:textColor="@color/colorSecundary" />
</RelativeLayout>