<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".Activity.LoginActivity">

    <EditText
        android:id="@+id/serverId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/ip_style"
        android:inputType="number"
        android:textColorHint="@color/colorHint"
        android:textColorLink="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="55dp"
        android:text="Server"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="115dp"
        android:text="Port"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/portId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/port_style"
        android:inputType="number"
        android:textColorHint="@color/colorHint"
        android:textColorLink="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Client ID"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/hostnameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="165dp"
        android:ems="10"
        android:hint="@string/clientid_style"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorHint"
        android:textColorLink="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/botaoSaveId"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:background="@color/colorPrimary"
        android:text="Save"
        android:textColor="@android:color/background_light" />

</RelativeLayout>