<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PanelButtonActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameButtonId"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="@string/nameButton_style"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorHint"
        android:textColorLink="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="55dp"
        android:text="Value"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/valueButtonId2"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/value_style"
        android:inputType="number"
        android:textColorHint="@color/colorHint"
        android:textColorLink="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="Topic"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/topicButtonId2"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/topic_style"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorHint"
        android:textColorLink="@color/colorPrimaryDark" />

    <ListView
        android:id="@+id/listViewId"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp">

    </ListView>

    <Button
        android:id="@+id/botaoAdicionarId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="275dp"
        android:layout_marginLeft="280dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="Adicionar"
        android:textColor="@color/colorSecundary"
        android:textStyle="bold" />

</RelativeLayout>